@@ -48,6 +48,7 @@ Bugs fixed
 - Bug 2551 - wifi preamble should be part of TXVECTOR
 - Bug 2552 - Remove code duplication between Yans and Spectrum
 - Bug 2563 - Modify pybindgen version check to >= minimum version required
+- Bug 2564 - Simulation crashes when CtsTimeout is triggered for A-MPDU transmissions
 
 Known issues
 ------------
